# Echoloom

./: .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.streamlit  LICENSE  Makefile  README.md  SECURITY_AUDIT.md  docker-compose.yml  prd.json  pyproject.toml
.github/workflows/: ci.yml  smoke.yml
data/kb/: faq.csv  faq.jsonl
data/samples/: intent_samples.csv
docs/: API.md  BRANCHING.md  COMPLIANCE_CHECKLIST.md  DATA_LIFECYCLE.md  DEVELOPER.md  RUNBOOK.md  SECRETS.md  SECURITY.md  SETUP.md  UI_STREAMLIT.md  analytics.md  architecture-sequence.md  architecture.md
docs/kb/: schema.md
docs/nlp/: data-schema.md  intent-taxonomy.md  sentiment.md
scripts/: export_openapi.py
src/echoloom/: app.py  config.py  schemas.py  security.py
src/echoloom/data/: encryption.py  ingest_intents.py
src/echoloom/kb/: formatting.py  ingest_kb.py  retrieval.py
src/echoloom/nlp/: adapter.py  intent_classifier.py  language.py  ner.py  pii.py  sentiment.py  smalltalk.py  tone.py
src/echoloom/sdk/: client.py
tests/: test_api_chat.py  test_health.py  test_ingest_intents.py  test_intent_classifier.py  test_kb_pipeline.py  test_language_and_pii.py  test_ner.py  test_nlp_adapter.py  test_sdk_client.py  test_security.py  test_sentiment.py  test_smalltalk.py  test_tone.py
tests/e2e/: test_conversation.py
ui/: client.py  streamlit_app.py
ui/.streamlit/: config.toml
