[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "echoloom"
version = "0.1.0"
description = "AI-powered chatbot backend"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{ name = "Echoloom Authors" }]
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "scikit-learn>=1.5",
  "vaderSentiment>=3.3",
  "prometheus-client>=0.20",
  "langdetect>=1.0",
  "cryptography>=41.0.0",
  "bleach>=6.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "black>=24.8",
  "httpx>=0.28",
]
ui = [
  "streamlit>=1.38",
  "httpx>=0.28",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=src --cov-report=term-missing"